--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "custom_components/hacs"]
-	path = custom_components/hacs
-	url = https://github.com/hacs/integration
+[submodule "custom_components/unifi_protect"]
+	path = custom_components/unifi_protect
+	url = https://github.com/briis/unifiprotect
