--- a/automations/office.yaml
+++ b/automations/office.yaml
@@ -1,43 +1,21 @@
 - alias: "Office Switch - On"
   trigger:
-    device_id: 686f8b550a3d4976bbcb888b1eae0062
-    domain: deconz
-    platform: device
-    type: remote_button_short_press
-    subtype: turn_on
+    platform: event
+    event_type: deconz_event
+    event_data:
+      id: office_switch
+      event: 1000
   action:
     service: scene.turn_on
     entity_id: scene.office_on
 
 - alias: "Office Switch - Off"
   trigger:
-    device_id: 686f8b550a3d4976bbcb888b1eae0062
-    domain: deconz
-    platform: device
-    type: remote_button_short_press
-    subtype: turn_off
-  action:
-    service: scene.turn_on
-    entity_id: scene.office_off
-
-- alias: "Office Switch - Dim Up"
-  trigger:
-    device_id: 686f8b550a3d4976bbcb888b1eae0062
-    domain: deconz
-    platform: device
-    type: remote_button_short_press
-    subtype: turn_on
-  action:
-    service: scene.turn_on
-    entity_id: scene.office_on
-
-- alias: "Office Switch - Dim Down"
-  trigger:
-    device_id: 686f8b550a3d4976bbcb888b1eae0062
-    domain: deconz
-    platform: device
-    type: remote_button_short_press
-    subtype: turn_off
+    platform: event
+    event_type: deconz_event
+    event_data:
+      id: office_switch
+      event: 4000
   action:
     service: scene.turn_on
     entity_id: scene.office_off
@@ -48,12 +26,12 @@
     - platform: state
       entity_id: binary_sensor.office_closet_door
       to: 'on'
-    # Office switch is turned on
-    - device_id: 686f8b550a3d4976bbcb888b1eae0062
-      domain: deconz
-      platform: device
-      type: remote_button_short_press
-      subtype: turn_on
+    # Office switch - on
+    - platform: event
+      event_type: deconz_event
+      event_data:
+        id: office_switch
+        event: 1000
   # Ensure the closet is open since it could’ve been an
   # office switch press but the door is closed
   condition:
@@ -75,11 +53,12 @@
 
 - alias: "Toggle space heater"
   trigger:
-    device_id: 73d8432e2db042689597b3bd59a9139a
-    domain: deconz
-    platform: device
-    type: remote_button_short_press
-    subtype: turn_on
+    # Office mini button
+    platform: event
+    event_type: deconz_event
+    event_data:
+      id: smart_switch
+      event: 1002
   action:
     service: homeassistant.toggle
     entity_id: switch.space_heater
