--- a/automations/shades.yaml
+++ b/automations/shades.yaml
@@ -19,72 +19,10 @@
       - cover.dining_room
       # - cover.office
 
-- alias: "Close dining room shades in the evening"
+- alias: "Close shades in the evening"
   trigger:
     - platform: sun
       event: sunset
-  condition:
-    - condition: state
-      entity_id: binary_sensor.dining_room_window
-      state: 'off'
   action:
-    service: cover.close_cover
-    entity_id:
-      - cover.dining_room
-
-- alias: "Close master bedroom shades in the evening"
-  trigger:
-    - platform: sun
-      event: sunset
-  condition:
-    - condition: state
-      entity_id: binary_sensor.master_bedroom_window
-      state: 'off'
-  action:
-    service: cover.close_cover
-    entity_id:
-      - cover.master_bedroom
-
-- alias: "Close office shades in the evening"
-  trigger:
-    - platform: sun
-      event: sunset
-  condition:
-    - condition: state
-      entity_id: binary_sensor.office_window
-      state: 'off'
-  action:
-    service: cover.close_cover
-    entity_id:
-      - cover.office
-
-- alias: "Close living room shades in the evening"
-  trigger:
-    - platform: sun
-      event: sunset
-  condition:
-    - condition: and
-      conditions:
-        - condition: state
-          entity_id: binary_sensor.living_room_window_left
-          state: 'off'
-        - condition: state
-          entity_id: binary_sensor.living_room_window_right
-          state: 'off'
-  action:
-    service: cover.close_cover
-    entity_id:
-      - cover.office
-
-- alias: "Close kitchen shades in the evening"
-  trigger:
-    - platform: sun
-      event: sunset
-  condition:
-    - condition: state
-      entity_id: binary_sensor.kitchen_window
-      state: 'off'
-  action:
-    service: cover.close_cover
-    entity_id:
-      - cover.kitchen
+    service: script.turn_on
+    entity_id: script.shades_close
