--- a/integrations/homekit.yaml
+++ b/integrations/homekit.yaml
@@ -25,8 +25,9 @@ filter:
     - light.garage_hallway_overhead
     - light.garage_laundry_overhead
     - light.garage_shop_overhead
-    - light.garage_stairs
-    - light.guest_bedroom_lamp_right
+    - light.garage_stairs1
+    - light.garage_stairs2
+    - light.guest_bedroom_lamp
     - light.guest_bedroom_overhead
     - light.hallway_overhead
     - light.kitchen_overhead
