--- a/groups.yaml
+++ b/groups.yaml
@@ -54,12 +54,11 @@ batteries:
   name: Batteries
   icon: mdi:battery
   entities:
-    - sensor.back_door_open_battery
     - sensor.bonus_room_left_window_battery
     - sensor.bonus_room_right_window_battery
     - sensor.bonus_room_small_window_battery
     - sensor.dining_room_window_battery
-    - sensor.entryway_motion_sensor_battery
+    # - sensor.entryway_motion_sensor_battery
     - sensor.guest_bedroom_left_window_battery
     - sensor.guest_bedroom_right_window_battery
     - sensor.hall_closet_door_battery
@@ -69,11 +68,11 @@ batteries:
     - sensor.living_room_window_right_battery
     - sensor.master_bathroom_window_battery
     - sensor.master_bedroom_window_battery
-    - sensor.mini_button_battery
     - sensor.office_closet_door_left_battery
     - sensor.office_closet_door_right_battery
-    - sensor.office_window_battery
+    - sensor.office_mini_button_battery
     - sensor.office_switch_battery
+    - sensor.office_window_battery
 
 garage_doors:
   name: Garage Doors
