--- a/scenes.yaml
+++ b/scenes.yaml
@@ -21,3 +21,31 @@
     light.desk_lamp: 'off'
     light.office_closet_overhead: 'off'
     switch.space_heater: 'off'
+
+- name: Master Bedroom - On
+  entities:
+    light.master_bedroom_overhead: 'on'
+    light.master_bedroom_left_lamp: 'on'
+    light.master_bedroom_right_lamp: 'on'
+
+- name: Master Bedroom - Off
+  entities:
+    light.master_bedroom_overhead: 'off'
+    light.master_bedroom_left_lamp: 'off'
+    light.master_bedroom_right_lamp: 'off'
+
+- name: Living Room - On
+  entities:
+    light.living_room_arc_lamp: 'on'
+    light.living_room_lamp: 'on'
+    light.sofa_lightstrip: 'on'
+    light.chair_lightstrip: 'on'
+    light.bulb_lamp: 'on'
+
+- name: Living Room - Off
+  entities:
+    light.living_room_arc_lamp: 'off'
+    light.living_room_lamp: 'off'
+    light.sofa_lightstrip: 'off'
+    light.chair_lightstrip: 'off'
+    light.bulb_lamp: 'off'
