--- a/configuration.yaml
+++ b/configuration.yaml
@@ -37,7 +37,7 @@ group: !include groups.yaml
 homekit: !include integrations/homekit.yaml
 input_boolean: !include integrations/input_boolean.yaml
 light: !include integrations/light.yaml
-octoprint: !include integrations/octoprint.yaml
+# octoprint: !include integrations/octoprint.yaml
 scene: !include scenes.yaml
 sensor: !include integrations/sensor.yaml
 shell_command: !include integrations/shell_command.yaml
