--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -37,3 +37,5 @@ somfy_system_id: ffffffffff
 
 spotify_client_id: ffffffffffffffffffffffffffffffff
 spotify_client_secret: ffffffffffffffffffffffffffffffff
+
+purpleair_url: http://example.com
