--- a/integrations/sensor.yaml
+++ b/integrations/sensor.yaml
@@ -10,7 +10,6 @@
   sensors:
     open_windows_count:
       friendly_name: "Open Windows"
-      entity_id: group.window_sensors
       value_template: >-
         {{ expand('group.window_sensors') | selectattr('state', 'eq', 'on') | list | length | int }}
       icon_template: >-
@@ -22,7 +21,6 @@
 
     open_doors_count:
       friendly_name: "Open Doors"
-      entity_id: group.door_sensors
       value_template: >-
         {{ expand('group.door_sensors') | selectattr('state', 'eq', 'on') | list | length | int }}
       icon_template: >-
@@ -34,7 +32,6 @@
 
     open_garage_doors_count:
       friendly_name: "Open Garage Doors"
-      entity_id: group.garage_doors
       value_template: >-
         {{ expand('group.garage_doors') | selectattr('state', 'eq', 'open') | list | length | int }}
       icon_template: >-
@@ -43,3 +40,103 @@
         {% else %}
           mdi:garage-variant
         {% endif %}
+
+# From https://github.com/teich/home-bv/blob/main/sensors.yaml and
+# https://community.home-assistant.io/t/purpleair-air-quality-sensor/146588
+- platform: rest
+  name: 'PurpleAir'
+  resource: !secret purpleair_url
+  scan_interval: 60
+  device_class: timestamp
+  value_template: >
+    {{ state_attr('sensor.purpleair', 'results')[0]['LastSeen'] }}
+  json_attributes:
+    - results
+
+- platform: template
+  sensors:
+    purpleair_aqi:
+      friendly_name: 'PurpleAir AQI'
+      # Set this sensor to be the AQI value.
+      #
+      # Code translated from JavaScript found at:
+      # https://docs.google.com/document/d/15ijz94dXJ-YAZLi9iZ_RaBwrZ4KtYeCy08goGBwnbCU/edit#
+      value_template: >
+        {% macro calcAQI(Cp, Ih, Il, BPh, BPl) -%}
+          {{ (((Ih - Il)/(BPh - BPl)) * (Cp - BPl) + Il)|round }}
+        {%- endmacro %}
+        {% set pm25 = state_attr('sensor.purpleair', 'results')[0]['PM2_5Value']|float %}
+        {% if pm25 > 1000 %}
+          invalid
+        {% elif pm25 > 350.5 %}
+          {{ calcAQI(pm25, 500.0, 401.0, 500.0, 350.5) }}
+        {% elif pm25 > 250.5 %}
+          {{ calcAQI(pm25, 400.0, 301.0, 350.4, 250.5) }}
+        {% elif pm25 > 150.5 %}
+          {{ calcAQI(pm25, 300.0, 201.0, 250.4, 150.5) }}
+        {% elif pm25 > 55.5 %}
+          {{ calcAQI(pm25, 200.0, 151.0, 150.4, 55.5) }}
+        {% elif pm25 > 35.5 %}
+          {{ calcAQI(pm25, 150.0, 101.0, 55.4, 35.5) }}
+        {% elif pm25 > 12.1 %}
+          {{ calcAQI(pm25, 100.0, 51.0, 35.4, 12.1) }}
+        {% elif pm25 >= 0.0 %}
+          {{ calcAQI(pm25, 50.0, 0.0, 12.0, 0.0) }}
+        {% else %}
+          invalid
+        {% endif %}
+      unit_of_measurement: "AQI"
+      entity_id: sensor.purpleair
+      availability_template: "{{ sensor.purpleair_available }}"
+    purpleair_description:
+      friendly_name: 'PurpleAir AQI Description'
+      value_template: >
+        {% set aqi = states('sensor.purpleair_aqi')|float %}
+        {% if aqi >= 401.0 %}
+          Very Hazardous
+        {% elif aqi >= 301.0 %}
+          Hazardous
+        {% elif aqi >= 201.0 %}
+          Very Unhealthy
+        {% elif aqi >= 151.0 %}
+          Unhealthy
+        {% elif aqi >= 101.0 %}
+          Unhealthy for Sensitive Groups
+        {% elif aqi >= 51.0 %}
+          Moderate
+        {% elif aqi >= 0.0 %}
+          Good
+        {% else %}
+          unknown
+        {% endif %}
+      entity_id: sensor.purpleair
+      availability_template: "{{ sensor.purpleair_available }}"
+    purpleair_pm25:
+      friendly_name: 'PurpleAir PM 2.5'
+      value_template: "{{ state_attr('sensor.purpleair', 'results')[0]['PM2_5Value'] }}"
+      unit_of_measurement: "μg/m3"
+      entity_id: sensor.purpleair
+      availability_template: "{{ sensor.purpleair_available }}"
+    purpleair_temp:
+      friendly_name: 'PurpleAir Temperature'
+      # Why "- 8"?
+      # https://www2.purpleair.com/community/faq#!hc-primary-and-secondary-data-header
+      value_template: "{{ state_attr('sensor.purpleair', 'results')[0]['temp_f'] | float - 8 }}"
+      unit_of_measurement: "°F"
+      device_class: temperature
+      entity_id: sensor.purpleair
+      availability_template: "{{ sensor.purpleair_available }}"
+    purpleair_humidity:
+      friendly_name: 'PurpleAir Humidity'
+      value_template: "{{ state_attr('sensor.purpleair', 'results')[0]['humidity'] }}"
+      unit_of_measurement: "%"
+      device_class: humidity
+      entity_id: sensor.purpleair
+      availability_template: "{{ sensor.purpleair_available }}"
+    purpleair_pressure:
+      friendly_name: 'PurpleAir Pressure'
+      value_template: "{{ state_attr('sensor.purpleair', 'results')[0]['pressure'] }}"
+      unit_of_measurement: "mb"
+      device_class: pressure
+      entity_id: sensor.purpleair
+      availability_template: "{{ sensor.purpleair_available }}"
