--- a/integrations/timer.yaml
+++ b/integrations/timer.yaml
@@ -1,4 +1,9 @@
 front_door_lock:
-  name: "Front Door Lock Timer"
+  name: Front Door Lock Timer
   duration: '00:01:00'
   icon: mdi:door
+
+hallway:
+    name: Hallway Timer
+    duration: '00:01:00'
+    icon: mdi:ceiling-light
