--- a/automations/dining_room.yaml
+++ b/automations/dining_room.yaml
@@ -1,43 +1,43 @@
 - alias: "Dining Room Switch - On"
   trigger:
-    platform: event
-    event_type: deconz_event
-    event_data:
-      id: dining_room_switch
-      event: 1000
+    device_id: c4a57a84729842b09704440c81a26ac8
+    domain: zha
+    platform: device
+    type: remote_button_short_press
+    subtype: turn_on
   action:
     service: scene.turn_on
     entity_id: scene.kitchen_on
 
 - alias: "Dining Room Switch - Off"
   trigger:
-    platform: event
-    event_type: deconz_event
-    event_data:
-      id: dining_room_switch
-      event: 4000
+    device_id: c4a57a84729842b09704440c81a26ac8
+    domain: zha
+    platform: device
+    type: remote_button_short_press
+    subtype: turn_off
   action:
     service: scene.turn_on
     entity_id: scene.kitchen_off
 
 - alias: "Dining Room Switch - Up"
   trigger:
-    platform: event
-    event_type: deconz_event
-    event_data:
-      id: dining_room_switch
-      event: 2000
+    device_id: c4a57a84729842b09704440c81a26ac8
+    domain: zha
+    platform: device
+    type: remote_button_short_press
+    subtype: dim_up
   action:
     service: cover.open_cover
     entity_id: cover.dining_room
 
 - alias: "Dining Room Switch - Down"
   trigger:
-    platform: event
-    event_type: deconz_event
-    event_data:
-      id: dining_room_switch
-      event: 3000
+    device_id: c4a57a84729842b09704440c81a26ac8
+    domain: zha
+    platform: device
+    type: remote_button_short_press
+    subtype: dim_down
   action:
     service: cover.close_cover
     entity_id: cover.dining_room
