--- a/automations/master_bedroom.yaml
+++ b/automations/master_bedroom.yaml
@@ -1,63 +1,63 @@
 - alias: "Master Bedroom Switch - On"
   trigger:
-    - platform: event
-      event_type: deconz_event
-      event_data:
-        id: master_bedroom_switch
-        event: 1000
-    - platform: event
-      event_type: deconz_event
-      event_data:
-        id: master_bedroom_switch_2
-        event: 1000
+    - device_id: 4456c02f0e9a11ebbe43dbb15798791e
+      domain: zha
+      platform: device
+      type: remote_button_short_press
+      subtype: turn_on
+    - device_id: f55a8df3480241c3870448cc6d74c076
+      domain: zha
+      platform: device
+      type: remote_button_short_press
+      subtype: turn_on
   action:
     service: scene.turn_on
     entity_id: scene.master_bedroom_on
 
 - alias: "Master Bedroom Switch - Off"
   trigger:
-    - platform: event
-      event_type: deconz_event
-      event_data:
-        id: master_bedroom_switch
-        event: 4000
-    - platform: event
-      event_type: deconz_event
-      event_data:
-        id: master_bedroom_switch_2
-        event: 4000
+    - device_id: 4456c02f0e9a11ebbe43dbb15798791e
+      domain: zha
+      platform: device
+      type: remote_button_short_press
+      subtype: turn_off
+    - device_id: f55a8df3480241c3870448cc6d74c076
+      domain: zha
+      platform: device
+      type: remote_button_short_press
+      subtype: turn_off
   action:
     service: scene.turn_on
     entity_id: scene.master_bedroom_off
 
 - alias: "Master Bedroom Switch - Up"
   trigger:
-    - platform: event
-      event_type: deconz_event
-      event_data:
-        id: master_bedroom_switch
-        event: 2000
-    - platform: event
-      event_type: deconz_event
-      event_data:
-        id: master_bedroom_switch_2
-        event: 2000
+    - device_id: 4456c02f0e9a11ebbe43dbb15798791e
+      domain: zha
+      platform: device
+      type: remote_button_short_press
+      subtype: dim_up
+    - device_id: f55a8df3480241c3870448cc6d74c076
+      domain: zha
+      platform: device
+      type: remote_button_short_press
+      subtype: dim_up
   action:
     service: cover.open_cover
     entity_id: cover.master_bedroom
 
 - alias: "Master Bedroom Switch - Down"
   trigger:
-    - platform: event
-      event_type: deconz_event
-      event_data:
-        id: master_bedroom_switch
-        event: 3000
-    - platform: event
-      event_type: deconz_event
-      event_data:
-        id: master_bedroom_switch_2
-        event: 3000
+    - device_id: 4456c02f0e9a11ebbe43dbb15798791e
+      domain: zha
+      platform: device
+      type: remote_button_short_press
+      subtype: dim_down
+    - device_id: f55a8df3480241c3870448cc6d74c076
+      domain: zha
+      platform: device
+      type: remote_button_short_press
+      subtype: dim_down
   action:
     service: cover.close_cover
     entity_id: cover.master_bedroom
