--- a/automations/office.yaml
+++ b/automations/office.yaml
@@ -1,21 +1,21 @@
 - alias: "Office Switch - On"
   trigger:
-    platform: event
-    event_type: deconz_event
-    event_data:
-      id: office_switch
-      event: 1000
+    device_id: 686f8b550a3d4976bbcb888b1eae0062
+    domain: zha
+    platform: device
+    type: remote_button_short_press
+    subtype: turn_on
   action:
     service: scene.turn_on
     entity_id: scene.office_on
 
 - alias: "Office Switch - Off"
   trigger:
-    platform: event
-    event_type: deconz_event
-    event_data:
-      id: office_switch
-      event: 4000
+    device_id: 686f8b550a3d4976bbcb888b1eae0062
+    domain: zha
+    platform: device
+    type: remote_button_short_press
+    subtype: turn_off
   action:
     service: scene.turn_on
     entity_id: scene.office_off
@@ -27,11 +27,11 @@
       entity_id: binary_sensor.office_closet_door
       to: 'on'
     # Office switch - on
-    - platform: event
-      event_type: deconz_event
-      event_data:
-        id: office_switch
-        event: 1000
+    - device_id: 686f8b550a3d4976bbcb888b1eae0062
+      domain: zha
+      platform: device
+      type: remote_button_short_press
+      subtype: turn_on
   # Ensure the closet is open since it could’ve been an
   # office switch press but the door is closed
   condition:
@@ -44,21 +44,23 @@
 
 - alias: "Turn off office closet light"
   trigger:
-    platform: state
-    entity_id: binary_sensor.office_closet_door
-    to: 'off'
+    device_id: 686f8b550a3d4976bbcb888b1eae0062
+    domain: zha
+    platform: device
+    type: remote_button_short_press
+    subtype: turn_off
   action:
     service: homeassistant.turn_off
     entity_id: light.office_closet_overhead
 
 - alias: "Toggle space heater"
   trigger:
-    # Office mini button
-    platform: event
-    event_type: deconz_event
-    event_data:
-      id: smart_switch
-      event: 1002
+    # Office Button
+    device_id: f80a4c940e9b11eb9a3d1f26729555ba
+    domain: zha
+    platform: device
+    type: remote_button_short_press
+    subtype: remote_button_short_press
   action:
     service: homeassistant.toggle
     entity_id: switch.space_heater
