--- a/automations/living_room.yaml
+++ b/automations/living_room.yaml
@@ -1,4 +1,4 @@
-- alias: "Living Room Switch - On"
+- alias: Living Room Switch - On
   trigger:
     device_id: f9f52b9b0e9811eb933a8190df4e86f9
     domain: zha
@@ -9,7 +9,7 @@
     service: scene.turn_on
     entity_id: scene.living_room_on
 
-- alias: "Living Room Switch - Off"
+- alias: Living Room Switch - Off
   trigger:
     device_id: f9f52b9b0e9811eb933a8190df4e86f9
     domain: zha
@@ -20,7 +20,7 @@
     service: scene.turn_on
     entity_id: scene.living_room_off
 
-- alias: "Living Room Switch - Up"
+- alias: Living Room Switch - Up
   trigger:
     device_id: f9f52b9b0e9811eb933a8190df4e86f9
     domain: zha
@@ -31,7 +31,7 @@
     service: cover.open_cover
     entity_id: cover.living_room
 
-- alias: "Living Room Switch - Down"
+- alias: Living Room Switch - Down
   trigger:
     device_id: f9f52b9b0e9811eb933a8190df4e86f9
     domain: zha
