--- a/automations/sun.yaml
+++ b/automations/sun.yaml
@@ -1,4 +1,4 @@
-- alias: "Sunset"
+- alias: Sunset
   trigger:
     - platform: sun
       event: sunset
@@ -6,7 +6,7 @@
     service: homeassistant.turn_on
     entity_id: scene.sunset
 
-- alias: "Sunrise"
+- alias: Sunrise
   trigger:
     - platform: sun
       event: sunrise
