--- a/automations/office.yaml
+++ b/automations/office.yaml
@@ -9,6 +9,33 @@
     service: scene.turn_on
     entity_id: scene.office_on
 
+- alias: Office Switch - Lamp On
+  trigger:
+    device_id: 686f8b550a3d4976bbcb888b1eae0062
+    domain: zha
+    platform: device
+    type: remote_button_short_press
+    subtype: turn_on
+  condition:
+    condition: state
+    entity_id: sun.sun
+    state: 'below_horizon'
+  action:
+    service: scene.turn_on
+    entity_id: scene.office_lamp_on
+
+- alias: Sunset - Office Lamp
+  trigger:
+    platform: sun
+    event: sunset
+  condition:
+    condition: state
+    entity_id: light.office_overhead
+    state: 'on'
+  action:
+    service: scene.turn_on
+    entity_id: scene.office_lamp_on
+
 - alias: Office Switch - Off
   trigger:
     device_id: 686f8b550a3d4976bbcb888b1eae0062
