Only enable motion hallway if the light is off

--- a/automations/hallway.yaml
+++ b/automations/hallway.yaml
@@ -32,6 +32,10 @@
     device_id: 5090f5239ebb45ceb8632bd9b11cee3f
     entity_id: binary_sensor.hallway_motion
     domain: binary_sensor
+  condition:
+    condition: state
+    entity_id: light.hallway_overhead
+    state: 'off'
   action:
     - service: scene.turn_on
       entity_id: scene.hallway_on
