--- a/configuration.yaml
+++ b/configuration.yaml
@@ -20,6 +20,7 @@ http:
   ssl_key: ssl/privkey.pem
 ios:
 logbook:
+lovelace: !include integrations/lovelace.yaml
 mobile_app:
 recorder:
 script: !include_dir_merge_named scripts
