--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,7 +1,5 @@
 title: !secret home_name
-
 views:
-  - !include ui/home.yaml
+  - !include ui/favorites.yaml
   - !include ui/switches.yaml
   - !include ui/status.yaml
-  - !include ui/development.yaml
