--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -39,3 +39,6 @@ spotify_client_id: ffffffffffffffffffffffffffffffff
 spotify_client_secret: ffffffffffffffffffffffffffffffff
 
 purpleair_url: http://example.com
+
+front_porch_url: http://example.com
+driveway_url: http://example.com
