--- a/scenes.yaml
+++ b/scenes.yaml
@@ -58,12 +58,20 @@
   entities:
     light.living_room_arc_lamp:
       state: 'on'
+      brightness: 255
+      color_temp: 320
     light.living_room_lamp:
       state: 'on'
+      brightness: 255
+      color_temp: 320
     light.sofa_lightstrip:
       state: 'on'
+      brightness: 200
+      color_temp: 320
     light.chair_lightstrip:
       state: 'on'
+      brightness: 200
+      color_temp: 320
     light.bulb_lamp:
       state: 'on'
 
@@ -102,4 +110,94 @@
 - name: Hallway - Off
   entities:
     light.hallway_overhead:
+      state: 'off'
+
+- name: Movie
+  icon: mdi:movie-open
+  entities:
+    light.bulb_lamp:
+      state: 'on'
+    light.living_room_arc_lamp:
+      state: 'on'
+      brightness: 77
+      rgb_color: [64, 30, 255]
+    light.living_room_lamp_1:
+      state: 'on'
+      brightness: 178
+      rgb_color: [255, 74, 208]
+    light.living_room_lamp_2:
+      state: 'on'
+      brightness: 178
+      rgb_color: [64, 30, 255]
+    light.sofa_lightstrip:
+      state: 'on'
+      brightness: 178
+      rgb_color: [255, 42, 39]
+    light.chair_lightstrip:
+      state: 'on'
+      brightness: 178
+      rgb_color: [64, 30, 255]
+    light.entryway_overhead:
+      state: 'off'
+
+- name: Bedtime
+  icon: mdi:bed-king
+  entities:
+    light.master_bedroom_overhead:
+      state: 'off'
+    light.master_bedroom_left_lamp:
+      state: 'off'
+    light.master_bedroom_right_lamp:
+      state: 'off'
+    light.bed_lightstrips:
+      state: 'on'
+      brightness: 77
+      color_temp: 400
+    group.office_lights:
+      state: 'off'
+    group.hallway_lights:
+      state: 'off'
+    group.entryway_lights:
+      state: 'off'
+    group.living_room_lights:
+      state: 'off'
+    group.dining_room_lights:
+      state: 'off'
+    group.kitchen_lights:
+      state: 'off'
+    group.bonus_room_lights:
+      state: 'off'
+    group.garage_lights:
+      state: 'off'
+    group.outdoor_lights:
+      state: 'off'
+    switch.space_heater:
+      state: 'off'
+
+- name: Goodnight
+  icon: mdi:weather-night
+  entities:
+    fan.master_bedroom:
+      state: 'on'
+    group.master_bedroom_lights:
+      state: 'off'
+    group.office_lights:
+      state: 'off'
+    group.hallway_lights:
+      state: 'off'
+    group.entryway_lights:
+      state: 'off'
+    group.living_room_lights:
+      state: 'off'
+    group.dining_room_lights:
+      state: 'off'
+    group.kitchen_lights:
+      state: 'off'
+    group.bonus_room_lights:
+      state: 'off'
+    group.garage_lights:
+      state: 'off'
+    group.outdoor_lights:
+      state: 'off'
+    switch.space_heater:
       state: 'off'
